# jaggimage-viewer

./: .gitignore  README.md  jaggimage-viewer.py  jaggimage_viewer.py  pyproject.toml
jaggimage_viewer/: jaggimage_viewer.py
